--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity" />
+        <service android:name=".fcm.MyFCM">
+            <intent-filter>
+                <action android:name="com.google.firebase.MEEAGING_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
-
 </manifest>
